css/style.css
h1, h2, h3, h4, h5 {
  margin: 0px;
  padding: 0px;
}
.testingFill {
  background-color: #999;
  border: 1px solid black;
}
body {
    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
   font-weight: 300;
  overflow: hidden;
}
.topBar {
  height: 80px;
  display:flex;
  border-radius: 10px;
  border-bottom: 1px solid #999;
}
.bioPic {
  height:50px;
  width:50px;
  margin: 15px;
}
.nameContainer {
  display:flex;
  flex-direction: column;
  margin:15px;
}
.myName {
  font-size:24pt;
  vertical-align:bottom;
}
.subtext {
  color: #889;
}
.menu {
  position: absolute;
  right:25px;
  display: flex;
  font-size: 20px;
}
.menuItem {
  margin:10px;
  color: #889;
  cursor: pointer;
  transition: 0.5s;
}
.mainContent {
  display:flex;
  flex-direction: column;
  align-items: center;
}
.subMenu {
  text-align:center;
  cursor: pointer;
}
.subMenu h2 {
  margin: 5px;
}
.subMenu span {
  margin-top:-10px;
  font-size:16px;
  color: #889;
  transition: 0.5s;  
}
.hoverText:hover {
  color: #001;
}
.selected {
  color: #BADA55 !important;
  font-weight: bold;
  border-radius: 4px;
  border-bottom: 1px solid #999;
}
.slideBar {
  display: flex;
  justify-content: center;
}
.slideBarLeft {
  display:flex;
}

.slideBarRight {
  display: flex;
}

.projectTile {
  display: flex;
  align-items: flex-end;
  justify-content: center;
  position: relative;
  width: 100px;
  height: 100px;
  font-weight: bold;
  background-color: #999;
  margin:25px;
  transition: 0.5s;
}
.projectTile:hover {
  background-color: #555;
  color: white;
}
.slideBarLeft > .projectTile{
  animation: leftSlideIn 1.5s ease-out;
  -webkit-animation: leftSlideIn 1.5s ease;
}

.slideBarRight > .projectTile{
  animation: rightSlideIn 1.5s ease-out;
  -webkit-animation: rightSlideIn 1.5s ease;
}
.showcase {
  position:relative;
  animation: fadeIn 1s ease;
  -webkit-animation: fadeIn 1s ease;
}
.showcase[slide="yep!"] {
  animation: slideDown 1s ease;
  -webkit-animation: slideDown 1s ease;
}
.showcaseHolder {
  display:flex;
  padding: 10px;
  border-radius: 10px;
  border-left: 1px solid #999;
  border-right: 1px solid #999;
}
.slideBar {
  display:flex;
  flex-direction: row;
  /* justify-content: space-between; */
}
.slideBarLeft {
  display:flex;
  flex-direction: row;
  justify-content: space-between;  
}
.sidePanel {
  flex: 1;
}
.showCasePane {
  flex: 6;
}
.showcaseTop {
  display: flex;
}
.showcasePaneName {
  display: flex;
  flex: 6;
  justify-content: center;
}
.showcasePaneLanguages {
  color: #889;
  flex: 2;
}
.showcaseBody {
  display: flex;
  flex-direction: row;
}
.showcaseImage {
  width: 250px;
  height: 250px;
}
.showcaseImage > img{
  width: 250px;
  height: 250px;
}
.showcaseText {
  padding: 10px;
}
.modPop {
  position: absolute;
  background-color: rgba(0,0,0,0.25);
  margin:0px;
  padding: 0px;
  width: 100%;
  height: 100%;
  z-index:97;
  top: 0; bottom: 0; left: 0; right: 0;
}
.modFrame {
  position: absolute;
  background-color: white;
  border: 3px solid #999;
  min-width: 600px;
  height: 450px;
  margin-left: -300px;
  margin-top: -225px;
  left: 50%;
  top: 50%;
  z-index:98;
}
.modImg {
  position: absolute;
  width: 500px;
  height: 350px;
  margin-left: -250px;
  margin-top: -175px;
  left: 50%;
  top: 50%;
  z-index:99;
}
.hideMe {
  display: none;
}

@keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}
@keyframes slideDown {
  from {
    top: 0px;
    opacity: 1;
  }
  to {
    top: 1000px;
    opacity: 0;
  }
}

@-webkit-keyframes slideDown {
  from {
    top: 0px;
    opacity: 1;
  }
  to {
    top: 1000px;
    opacity: 0;
  }
}
@keyframes leftSlideIn {
  from {
    left: -1550px;
    margin-left: 500%;
  }
  to {
    left: 0px;
    margin-left: 0%;
  }
}

@-webkit-keyframes leftSlideIn {
  from {
    left: -1550px;
  }
  to {
    left: 0px;}
}
  
@keyframes rightSlideIn {
  from {
    left: 1550px;
  }
  to {
    left: 0px;
  }
}

@-webkit-keyframes rightSlideIn {
  from {
    left: 1550px;
  }
  to {
    left: 0px;
  }
}

